@@ -35,6 +35,7 @@ are met:
 
 import unittest
 import os, glob
+import sys
 
 from .test_all import db, test_support, get_new_environment_path, \
         get_new_database_path
@@ -169,6 +170,14 @@ class DB_recno(DB) :
     def test_re_source(self) :
         for i in ["test", "test2", "test3"] :
             self.db.set_re_source(i)
+            self.assertEqual(i, self.db.get_re_source())
+
+    @unittest.skipIf(sys.version_info < (3, 6), 'Not tested Python < 3.6')
+    def test_re_source_path(self) :
+        import pathlib
+        for i in ["test", "test2", "test3"] :
+            i2 = pathlib.Path(i)
+            self.db.set_re_source(i2)
             self.assertEqual(i, self.db.get_re_source())
 
 class DB_queue(DB) :
